[package]
name = "granite-client"
version = "0.3.1"
edition = "2021"
description = "Typed async client for the Granite approval core. One source of truth for the wire contract, header policy, and destructive-intent taxonomy."
license = "MIT OR Apache-2.0"
repository = "https://github.com/stackwell-labs/granite-client"
readme = "README.md"
keywords = ["approval", "granite", "agent", "consent"]
categories = ["api-bindings", "authentication"]

[dependencies]
# The shared trust-environment primitive (`Environment { Prod, Test{tenant} }`).
# Reused — not re-declared — so Granite, this client, and capability all speak
# ONE environment type, and a Test approval can't launder into Prod.
# Local lattice build (v0.4.0): the v0.3.0 -> v0.4.0 capability jump is breaking,
# so a URL `[patch]` cannot satisfy a `tag=v0.3.0` requirement; while building the
# in-progress lattice locally the pin is the path dep directly. (Release re-pins to
# a published `tag = "v0.4.0"`.)
capability = { path = "/home/coreygirard/agent-platform/capability" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde"] }
# Only `time` (for await_decision's poll sleep). The runtime-agnostic
# primitive is poll_decision, which pulls in nothing.
tokio = { version = "1", default-features = false, features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
